feat: 监控面板增加全局流量24小时统计图表、单个代理增加多维度统计